- clean up the HTML - clean up the CSS - moving the import of Open Sans to the CSS - making the JS wait until the page is loaded to do it's thing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
+
 body {
   background: #000;
 }
+
 .img {
   position: relative;
   width: 1000px;
@@ -8,25 +11,25 @@ body {
   margin: 50px auto 0;
   background: url('img/wampastompamix-bg.png');
 }
+
 .text {
   position: absolute;
-  top: 50px;
+  top: 40px;
   left: -30px;
   width: 500px;
   height: 2em;
-  font-family: 'Open Sans script=all rev=7', Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  color: #da3df4;
-  font-size: 85px;
+  color: transparent;
+  font-size: 5.5rem;
   font-weight: bold;
   transform: rotate(-20deg) skew(-20deg);
   text-align: center;
   background: -webkit-linear-gradient(#d33aea, #e62b43);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  line-height: 1em;
-  /*text-shadow: -1px -1px 1px #d33aea, 1px 1px 1px #e62b43;*/
+  background-clip: text;
+  line-height: 1;
 }
+
 .hand {
   position: absolute;
   width: 1000px;
