--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,41 @@
 
 body {
   background: #000;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
+header {
+  display: flex;
+  flex-direction: column;
+  max-width: 50vw;
+  align-items: center;
+  margin: auto;
+}
+input {
+  font-size: 2rem;
+  background: black;
+  border: 1px solid white;
+  padding: .5rem;
+  color: white;
+}
 .img {
   position: relative;
   width: 1000px;
   height: 420px;
   margin: 50px auto 0;
-  background: url('img/wampastompamix-bg.png');
+  background: url('img/wampastompamix-bg.png') no-repeat center center;
+  background-size: cover;
+  overflow: hidden;
+  /* Add cross-origin attribute */
+  background-origin: border-box;
 }
 
 .text {
   position: absolute;
-  top: 40px;
-  left: -30px;
-  width: 500px;
-  height: 2em;
+  top: 75px;
+  left: -10px;
+  width: 450px;
+  height: 1.65em;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   color: transparent;
@@ -27,12 +46,15 @@ body {
   text-align: center;
   background: -webkit-linear-gradient(#d33aea, #e62b43);
   background-clip: text;
-  line-height: 1;
+  line-height: .8;
 }
 
 .hand {
   position: absolute;
   width: 1000px;
   height: 420px;
-  background: url('img/wampastompamix-hand.png');
+  background: url('img/wampastompamix-hand.png') no-repeat center center;
+  background-size: cover;
+  /* Add cross-origin attribute */
+  background-origin: border-box;
 }
