try an SVG mask

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ header {
   align-items: center;
   margin: auto;
 }
+button,
 input {
   font-size: 2rem;
   background: black;
@@ -39,14 +40,16 @@ input {
   height: 1.65em;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  color: transparent;
+  color: white;
   font-size: 5.5rem;
   font-weight: bold;
   transform: rotate(-20deg) skew(-20deg);
   text-align: center;
-  background: -webkit-linear-gradient(#d33aea, #e62b43);
+  background: linear-gradient(#d33aea, #e62b43);
   -webkit-background-clip: text;
   background-clip: text;
+  -webkit-mask: url(#mask);
+  mask: url(#mask);
   line-height: .8;
 }
 
