--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ input {
   background: url('img/wampastompamix-bg.png') no-repeat center center;
   background-size: cover;
   overflow: hidden;
-  /* Add cross-origin attribute */
   background-origin: border-box;
 }
 
@@ -45,12 +44,20 @@ input {
   transform: rotate(-20deg) skew(-20deg);
   text-align: center;
   line-height: .8;
+  color: transparent;
 }
 
-.text span {
+.text::before {
+  content: attr(data-text);
   background: linear-gradient(#d33aea, #e62b43);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .hand {
@@ -59,6 +66,5 @@ input {
   height: 420px;
   background: url('img/wampastompamix-hand.png') no-repeat center center;
   background-size: cover;
-  /* Add cross-origin attribute */
   background-origin: border-box;
 }
