--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,12 @@ header {
   align-items: center;
   margin: auto;
 }
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
 button,
 input {
   font-size: 2rem;
@@ -19,6 +25,9 @@ input {
   border: 1px solid white;
   padding: .5rem;
   color: white;
+}
+button {
+  max-width: fit-content;
 }
 .img {
   position: relative;
